--- a/deltacloud/plugins/pom.xml
+++ b/deltacloud/plugins/pom.xml
@@ -9,7 +9,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<modules>
 		<module>org.jboss.tools.deltacloud.ui</module>
 		<module>org.jboss.tools.deltacloud.core</module>
-		<module>org.jboss.tools.deltacloud.as</module>
+		<module>org.jboss.tools.deltacloud.integration</module>
 		<module>org.jboss.tools.deltacloud.docs</module>
 	</modules>
 </project>
