--- a/deltacloud/features/pom.xml
+++ b/deltacloud/features/pom.xml
@@ -8,7 +8,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<name>org.jboss.tools.deltacloud.features</name>
 	<modules>
 		<module>org.jboss.tools.deltacloud.feature</module>
-	<!--	<module>org.jboss.tools.deltacloud.test.feature</module> -->
+		<module>org.jboss.tools.deltacloud.test.feature</module>
 	</modules>
 </project>
 	
