[JBIDE-7898] added test plugin
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27472 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/tests/pom.xml
+++ b/deltacloud/tests/pom.xml
@@ -6,8 +6,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<name>org.jboss.tools.deltacloud.tests</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-<!--	<modules>
+	<modules>
 		<module>org.jboss.tools.deltacloud.test</module>
-	</modules> -->
+	</modules>
 </project>
 	
