[JBIDE-7896] correcting pom syntax
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27476 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/tests/org.jboss.tools.deltacloud.test/pom.xml
+++ b/deltacloud/tests/org.jboss.tools.deltacloud.test/pom.xml
@@ -15,14 +15,16 @@
 		<emma.filter />
 		<emma.instrument.bundles />
 	</properties>
-	<plugin>
-		<groupId>org.sonatype.tycho</groupId>
-		<artifactId>maven-osgi-test-plugin</artifactId>
-		<version>${tychoVersion}</version>
-		<configuration>
-			<excludes>
-				<exclude>**/IntegrationTestSuite*.class</exclude>
-			</excludes>
-		</configuration>
-	</plugin>
+	<build>
+		<plugin>
+			<groupId>org.sonatype.tycho</groupId>
+			<artifactId>maven-osgi-test-plugin</artifactId>
+			<version>${tychoVersion}</version>
+			<configuration>
+				<excludes>
+					<exclude>**/IntegrationTestSuite*.class</exclude>
+				</excludes>
+			</configuration>
+		</plugin>
+	</build>
 </project>
