[JBIDE-7896] correcting pom syntax
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27477 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/tests/org.jboss.tools.deltacloud.test/pom.xml
+++ b/deltacloud/tests/org.jboss.tools.deltacloud.test/pom.xml
@@ -16,15 +16,17 @@
 		<emma.instrument.bundles />
 	</properties>
 	<build>
-		<plugin>
-			<groupId>org.sonatype.tycho</groupId>
-			<artifactId>maven-osgi-test-plugin</artifactId>
-			<version>${tychoVersion}</version>
-			<configuration>
-				<excludes>
-					<exclude>**/IntegrationTestSuite*.class</exclude>
-				</excludes>
-			</configuration>
-		</plugin>
+		<plugins>
+			<plugin>
+				<groupId>org.sonatype.tycho</groupId>
+				<artifactId>maven-osgi-test-plugin</artifactId>
+				<version>${tychoVersion}</version>
+				<configuration>
+					<excludes>
+						<exclude>**/IntegrationTestSuite*.class</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
