[JBIDE-7917] fixed error reporting
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27529 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -61,8 +61,8 @@ None.response=None
 Defaulted=Defaulted
 Loading.value=Loading...
 
-CreateInstanceError.title=Launch Instance Failure
-CreateInstanceError.msg=The attempt to launch instance: name={0}, image={1}, realm={2}, profile={3}
+CreateInstanceError.title=Error
+CreateInstanceError.msg=Could not launch instance \"{0}\" from image \"{1}\" using realm \"{2}\" and profile \"{3}\"
 CreateInstanceErrorReason.msg=Server did not launch instance
 
 ConfirmCreate.title=Confirm Launch Instance
