git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27531 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -279,23 +279,20 @@
       <handler
             class="org.jboss.tools.deltacloud.ui.commands.CreateInstanceFromAnyImageHandler"
             commandId="org.jboss.tools.deltacloud.ui.createinstanceFromAnyImage">
-			<activeWhen>
+			<enabledWhen>
                <with
                      variable="selection">
-					<iterate operator="and">
-						<adapt
-				             type="org.jboss.tools.deltacloud.core.DeltaCloud">
-								<test property="org.jboss.tools.deltacloud.ui.commands.hasImages"
-									value="true"/>
-						</adapt>
-	               	</iterate>
+                     <and>
+						<count value="+" />
+						<iterate operator="and">
+							<adapt
+					             type="org.jboss.tools.deltacloud.core.DeltaCloud">
+									<test property="org.jboss.tools.deltacloud.ui.commands.hasImages"
+										value="true"/>
+							</adapt>
+		               	</iterate>
+		             </and>
                </with>
-			</activeWhen>
-			<enabledWhen>
-				<with
-					variable="selection">
-					<count value="+" />
-				</with>
 			</enabledWhen>
       </handler>
    </extension>
