--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -150,8 +150,10 @@
 				variable="selection">
 				<and>
 					<count value="1" />
-					<adapt
-			             type="org.jboss.tools.deltacloud.core.DeltaCloud" />
+					<iterate operator="and">
+						<adapt
+				             type="org.jboss.tools.deltacloud.core.DeltaCloud" />
+			        </iterate>
 				</and>
 			</with>
 		</enabledWhen>
