git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27575 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/usage/plugins/org.jboss.tools.usage/build.properties
+++ b/usage/plugins/org.jboss.tools.usage/build.properties
@@ -6,8 +6,9 @@ bin.includes = .,\
                pom.xml,\
                src/,\
                META-INF/,\
-               OSGI-INF/
+               OSGI-INF/I10n/,\
+               .classpath,\
+               .project
 src.includes = about.html,\
-               pom.xml,\
-               OSGI-INF/
+               pom.xml
 source.. = src/
