--- a/jst/plugins/org.jboss.tools.jst.web.kb/src/org/jboss/tools/jst/web/kb/KbMessages.properties
+++ b/jst/plugins/org.jboss.tools.jst.web.kb/src/org/jboss/tools/jst/web/kb/KbMessages.properties
@@ -1,9 +1,12 @@
 VALIDATION_CONTEXT_LINKED_RESOURCE_PATH_MUST_NOT_BE_NULL=Linked resource path must not be null\!
 VALIDATION_CONTEXT_VARIABLE_NAME_MUST_NOT_BE_NULL=Variable name must not be null\!
 
-KBNATURE_NOT_FOUND=KB Nature is not installed.
-KBBUILDER_NOT_FOUND=KB Builder is not installed.
-KBPROBLEM=KB Problem: {0} {1} Use Quick Fix to allow JSF Content Assistant and Validation.
+KBNATURE_NOT_FOUND=Nature
+KBBUILDER_NOT_FOUND=Builder
+KBNATURE_SEPARATOR=,
+KBNATURE_LAST_SEPARATOR=and
+KBPROBLEM= JBoss Tools Knowledge Base problem: {0} is not installed on project. Use Quick Fix to enable {1} Content Assistant and Validation.
+KBPROBLEM_LOCATION=Project: {0}
 ENABLE_KB=Enable JSF CA and validation on this project
 
 ILLEGAL_CONTENTTYPE=Unknown contentType argument value: {0}
