[JBIDE-7763] revamped the whole manage keys page to deal with keys on the server (list, refresh, create, delete)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27701 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -116,7 +116,7 @@ ErrorInvalidDirectory.text=Specified directory is not a valid existing directory
 Directory.label=Directory
 
 CreateKey.title=Create Key
-CreateKey.msg=Specify a unique name for a new key:
+CreateKey.msg=Specify a unique id for a new key:
 ConfirmKeyDelete.title=Confirm Key Delete
 ConfirmKeyDelete.msg=Confirm deletion of key: {0}
 
