https://issues.jboss.org/browse/JBIDE-7077 Open With -> JBoss Tools -> "JBoss Tools Docbook Editor" - exist in context menu for every xml file docbook editor removed from plugin.xml. issue moved to 4.0.x
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27713 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
+++ b/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
@@ -209,14 +209,14 @@
          <contentTypeBinding contentTypeId="org.eclipse.wst.html.core.htmlsource"/>
          <contentTypeBinding contentTypeId="jsf.facelet"/>
       </editor>
-      <editor
+      <!--editor
       		class="org.jboss.tools.jst.jsp.jspeditor.JSPMultiPageEditor"
       		contributorClass="org.jboss.tools.jst.jsp.jspeditor.JSPMultiPageContributor"
       		extensions="xml"
       		icon="$nl$/images/xstudio/editors/xmldoc.gif"
       		id="org.jboss.tools.jst.jsp.jspeditor.DocBookEditor"
       		name="%editors.docbook.name">
-      </editor>
+      </editor -->
    </extension>
 
    <extension point="org.eclipse.ui.editorActions">
