[JBIDE-7763] revamped the whole manage keys page to deal with keys on the server (list, refresh, create, delete)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27716 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -88,7 +88,7 @@ NewInstance.desc=Specify details for a new instance you wish to launch based on 
 NewInstance.title=Launch Instance
 NewInstance.name=Launch Instance
 
-ManageKeys.desc=Select a physical key to use when creating an instance so that it may be accessed remotely.
+ManageKeys.desc=Select a key to use when creating an instance so that it may be accessed remotely.
 ManageKeys.title=Manage Keys
 ManageKeys.name=Manage Keys
 
