--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -289,7 +289,7 @@
 						<iterate operator="and">
 							<adapt
 					             type="org.jboss.tools.deltacloud.core.DeltaCloud">
-									<test property="org.jboss.tools.deltacloud.ui.commands.hasImages"
+									<test property="org.jboss.tools.deltacloud.ui.commands.isValid"
 										value="true"/>
 							</adapt>
 		               	</iterate>
@@ -782,7 +782,7 @@
 			class="org.jboss.tools.deltacloud.ui.commands.DeltaCloudPropertyTester"
 			id="org.jboss.tools.deltacloud.ui.commands.cloudpropertytester"
 			namespace="org.jboss.tools.deltacloud.ui.commands"
-			properties="hasImages"
+			properties="hasImages,isValid"
 			type="org.jboss.tools.deltacloud.core.DeltaCloud">
 		</propertyTester>
  	</extension>
