--- a/jst/plugins/org.jboss.tools.jst.web.ui/plugin.properties
+++ b/jst/plugins/org.jboss.tools.jst.web.ui/plugin.properties
@@ -54,3 +54,6 @@ NewXHTMLPageDescription = Create a New XHTML Page
 Bundle-Name.0 = Web UI
 NavigatorContent_FileContentProvider=JBoss Tools File Content Provider
 NavigatorContent_ProjectContentProvider=JBoss Tools Project Content Provider
+
+PreferencePage_Validator = Validation
+PropertiesPage_Validator = Expression Language Validation
