--- a/common/plugins/org.jboss.tools.common.el.ui/plugin.properties
+++ b/common/plugins/org.jboss.tools.common.el.ui/plugin.properties
@@ -1,3 +1,4 @@
 #Properties file for org.jboss.tools.common.el.ui
 Bundle-Vendor.0 = JBoss by Red Hat
 Bundle-Name.0 = EL UI Plug-in
+PreferencePage_EL = Expression Language
