--- a/common/plugins/org.jboss.tools.common.el.ui/plugin.xml
+++ b/common/plugins/org.jboss.tools.common.el.ui/plugin.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-
+   <extension point="org.eclipse.ui.preferencePages">
+      <page category="org.jboss.tools.common.model.ui" 
+            class="org.jboss.tools.common.el.ui.preferences.ELPreferencesPage" 
+            id="org.jboss.tools.el.ui" 
+            name="%PreferencePage_EL">
+      </page>
+	</extension>
 </plugin>
