https://issues.jboss.org/browse/JBIDE-8023 JSF component build missing test plugins from JST component test feature added
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27812 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/features/pom.xml
+++ b/jst/features/pom.xml
@@ -8,6 +8,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.jboss.tools.jst.feature</module>
+		<module>org.jboss.tools.jst.test.feature</module>
 		<module>org.jboss.tools.jst.web.tiles.feature</module>
 	</modules>
 </project>
