--- a/jst/features/org.jboss.tools.jst.test.feature/pom.xml
+++ b/jst/features/org.jboss.tools.jst.test.feature/pom.xml
@@ -7,7 +7,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	  <version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>org.jboss.tools.jst.test.features</groupId>
-	<artifactId>org.jboss.tools.jst.feature</artifactId> 
+	<artifactId>org.jboss.tools.jst.test.feature</artifactId> 
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-feature</packaging>
 </project>
