JBIDE-8013 Move the acquirement for KB Builder requirements out of the nature(-s)
New extension point is used to declare KB Builder requirement.

git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27827 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.web.kb/plugin.xml
+++ b/jst/plugins/org.jboss.tools.jst.web.kb/plugin.xml
@@ -5,6 +5,7 @@
    <extension-point id="KbIncludeContext" name="Kb Include Context Buillder" schema="schema/include.exsd" />
    <extension-point id="validator" name="KB Validator" schema="schema/validator.exsd"/>
    <extension-point id="elValidationDelegate" name="EL Validation Delegate" schema="schema/elValidationDelegate.exsd"/>
+   <extension-point id="KbRequire" name="KB Builder Requirement" schema="schema/KbRequire.exsd"/>
  
    <extension
          id="kbbuilder"
