--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
@@ -16,6 +16,7 @@ ImageCategoryName=Images
 CloudViewName=Cloud View
 
 PropertyName.title=Name
+PropertyAlias.title=Alias
 PropertyId.title=Id
 PropertyOwnerId.title=Owner Id
 PropertyHostname.title=Hostname
