[JBIDE-7536] renamed "Disconnect cloud" to "Delete cloud"
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27971 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.properties
@@ -17,8 +17,8 @@ command.stopinstance.tooltip = Stop
 command.rebootinstance = Reboot
 command.destroyinstance.label = Destroy
 command.destroyinstance.tooltip = Destroy
-command.disconnectcloud.label = Disconnect Cloud
-command.disconnectcloud.tooltip = Disconnect Cloud
+command.deletecloud.label = Delete Cloud
+command.deletecloud.tooltip = Delete Cloud
 command.newconnection.label = New Connection
 command.newconnection.tooltip = New Connection
 command.editconnection.label = Edit Connection
