[JBIDE-7536] renamed "Disconnect cloud" to "Delete cloud"
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27972 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -127,7 +127,7 @@
 		</enabledWhen>
       </handler>
       <handler
-            class="org.jboss.tools.deltacloud.ui.commands.DisconnectCloudHandler"
+            class="org.jboss.tools.deltacloud.ui.commands.DeleteCloudHandler"
             commandId="org.eclipse.ui.edit.delete">
 		<enabledWhen>
 			<with
