--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -149,7 +149,7 @@
 			<with
 				variable="selection">
 				<and>
-					<count value="1" />
+					<count value="+" />
 					<iterate operator="and">
 						<adapt
 				             type="org.jboss.tools.deltacloud.core.DeltaCloud" />
