--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -201,25 +201,17 @@
       <handler
             class="org.jboss.tools.deltacloud.ui.commands.StopInstanceHandler"
             commandId="org.jboss.tools.deltacloud.ui.stopinstance">
-			<activeWhen>
+			<enabledWhen>
                <with
                  variable="selection">
-					<iterate operator="and">
-						<and>
-							<adapt
-					             type="org.jboss.tools.deltacloud.core.DeltaCloudInstance">
-								<test property="org.jboss.tools.deltacloud.ui.commands.canStop"
+					<iterate operator="or">
+						<adapt
+				             type="org.jboss.tools.deltacloud.core.DeltaCloudInstance">
+							<test property="org.jboss.tools.deltacloud.ui.commands.canStop"
 									value="true"/>
-							</adapt>
-						</and>
+						</adapt>
 	               	</iterate>
                </with>
-			</activeWhen>
-			<enabledWhen>
-				<with
-					variable="selection">
-					<count value="+" />
-				</with>
 			</enabledWhen>
       </handler>
       <handler
