JBIDE-7527 Automatic runtime detection
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27999 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/runtime/features/pom.xml
+++ b/runtime/features/pom.xml
@@ -12,6 +12,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
+		<module>org.jboss.tools.runtime.core.feature</module>
 		<module>org.jboss.tools.runtime.feature</module>
 	</modules>
 </project>
