--- a/runtime/plugins/org.jboss.tools.runtime/build.properties
+++ b/runtime/plugins/org.jboss.tools.runtime/build.properties
@@ -5,4 +5,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                plugin.properties,\
                about.html,\
-               icons/
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               jboss_about.png
