remove local sources and update build.xml to pull from upstream update site zip & create one locally for publishing
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28004 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/drools/build.xml
+++ b/drools/build.xml
@@ -56,7 +56,7 @@
 		<!-- <delete file="${WORKINGDIR}/${COMPONENT}/${drools.zip}" quiet="true"/> -->
 
 		<delete dir="${WORKINGDIR}/${COMPONENT}/drools-update-site" quiet="true" />
-		<delete dir="${WORKINGDIR}/${COMPONENT}" quiet="true" includes="ReadMeDroolsEclipse.txt" />
+		<delete dir="${WORKINGDIR}/${COMPONENT}" quiet="true" includes="ReadMeDroolsEclipse.txt, LICENSE-ASL-2.0.txt" />
 
 	</target>
 
