comment out the plugins which are now upstream
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28010 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/drools/plugins/pom.xml
+++ b/drools/plugins/pom.xml
@@ -7,10 +7,15 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
+		<!-- these four plugins are built upstream -->
+		<!--
 		<module>org.drools.eclipse</module>
 		<module>org.drools.eclipse.task</module>
 		<module>org.eclipse.webdav</module>
 		<module>org.guvnor.tools</module>
+		-->
+
+		<!-- not published to JBoss Tools (yet?) -->
 		<module>org.jboss.tools.flow.ruleflow</module>
 	</modules>
 </project>
