https://issues.jboss.org/browse/JBIDE-8086 Usage Preference Page name is missing added OSGI-INF folder into bundle jar, tested on local build
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28105 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/usage/plugins/org.jboss.tools.usage/build.properties
+++ b/usage/plugins/org.jboss.tools.usage/build.properties
@@ -6,9 +6,9 @@ bin.includes = .,\
                pom.xml,\
                src/,\
                META-INF/,\
-               OSGI-INF/I10n/,\
                .classpath,\
-               .project
+               .project,\
+               OSGI-INF/
 src.includes = about.html,\
                pom.xml
 source.. = src/
