[JBIDE-8095] made command "show in remote system exploerer" to be available only if a single instance is selected
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28123 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.integration/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.integration/plugin.xml
@@ -24,7 +24,7 @@
 			<enabledWhen>
 				<with
 					variable="selection">
-					<count value="+" />
+					<count value="1" />
 				</with>
 			</enabledWhen>
       </handler>
@@ -51,9 +51,10 @@
          </command>
       </menuContribution>
    </extension>
-   <menuContribution
+   <extension point="org.eclipse.ui.menus">
+      <menuContribution
             allPopups="true"
-            locationURI="toolbar:org.jboss.tools.deltacloud.ui.views.InstanceView?after=instances">
+            locationURI="popup:org.jboss.tools.deltacloud.ui.views.DeltaCloudView?after=additions">	
          <command
                commandId="org.jboss.tools.deltacloud.integration.rse.showremotesysexplorer"
                disabledIcon="icons/system_viewd.gif"
@@ -62,7 +63,8 @@
                style="push"
                tooltip="%command.showInRemoteSysExplorer.tooltip">
          </command>
-   </menuContribution>
+      </menuContribution>
+   </extension>
    <extension
          point="org.jboss.tools.deltacloud.ui.newInstanceWizardPage">
       <page
