[JBIDE-7761] cloud viewer now also has command "show in remote system explorer"
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28129 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -483,6 +483,9 @@
 				name="instances"
 				visible="true" />
 			<separator
+				name="additions"
+				visible="true" />
+			<separator
 				name="connections"
 				visible="true" />
 			<separator
