https://issues.jboss.org/browse/JBIDE-8055 add SOA-P ER7 jars
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.0.CR1@28245 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/pom.xml
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/pom.xml
@@ -32,10 +32,24 @@
 						<phase>validate</phase>
 						<configuration>
 							<tasks>
-								<!-- JBDS-1343 uncomment this to pull a fresh copy of the jar from 
-									this or another location as needed -->
-								<!-- <delete file="modeshape-client.jar" quiet="true" /> <get src="http://jawa05.englab.brq.redhat.com/candidate/SOA-5.1-ER3/JBDS/modeshape-client.jar" 
-									dest="modeshape-client.jar" usetimestamp="true" /> -->
+								<!-- JBDS-1343, JBIDE-8055 uncomment this to pull a fresh copy of 
+									these jars from this or another location as needed -->
+								<!-- 
+								<property name="jarfolder"
+									value="http://jawa05.englab.brq.redhat.com/candidate/SOA-5.1-ER7/jbds" />
+								<property name="jar1" value="modeshape-client.jar" />
+								<property name="jar2" value="modeshape-common-2.2.1.jar" />
+								<property name="jar3" value="modeshape-graph-2.2.1.jar" />
+								<property name="jar4" value="modeshape-sequencer-ddl-2.2.1.jar" />
+								<delete file="${jar1}" quiet="true" />
+								<get src="${jarfolder}/${jar1}" dest="${jar1}" usetimestamp="true" />
+								<delete file="${jar2}" quiet="true" />
+								<get src="${jarfolder}/${jar2}" dest="${jar2}" usetimestamp="true" />
+								<delete file="${jar3}" quiet="true" />
+								<get src="${jarfolder}/${jar3}" dest="${jar3}" usetimestamp="true" />
+								<delete file="${jar4}" quiet="true" />
+								<get src="${jarfolder}/${jar4}" dest="${jar4}" usetimestamp="true" />
+ 								-->
 							</tasks>
 						</configuration>
 						<goals>
