--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
@@ -76,6 +76,7 @@ ConfirmCloudDelete.msg=Please choose the clouds that shall be disconnected by ch
 CreateInstance.label=Launch Instance
 
 NAME=Name
+ALIAS=Alias
 ID=ID
 HOSTNAME=Public Hostname
 STATUS=State
